# mt_simple_rag

./: .gitignore  README.md  create_kb.submit  experiment.submit  experiment_compendium.submit  index_wikipedia.submit  init.submit  pyproject.toml
config/: all.yaml  base.yaml  compendium.yaml  kilt_fever.yaml  kilt_nq.yaml  large.yaml  vllm.yaml  xl.yaml
config/experiments/: 01_kilt_fever_dense.yaml  02_kilt_fever_oracle.yaml  03_kilt_fever_random.yaml  04_kilt_fever_similar.yaml  05_kilt_fever_sparse.yaml  05_kilt_fever_unseen.yaml  06_kilt_fever_hybrid.yaml  06_kilt_fever_sparse.yaml  07_compendium_dense.yaml  07_kilt_fever_probabilistic.yaml  08_compendium_oracle.yaml  08_kilt_fever_unseen.yaml  09_compendium_dense.yaml  09_compendium_random.yaml  10_compendium_oracle.yaml  10_compendium_similar.yaml  11_compendium_random.yaml  11_compendium_sparse.yaml  (+11 more)
data/: kilt_fever_train_small.jsonl  kilt_fever_train_tiny.jsonl  kilt_wiki_small.jsonl  kilt_wiki_small_paragraphs.jsonl
playground/: 01_extract_paragraphs.ipynb  02_create_embedding.ipynb  03_retriev.ipynb  04_extract_ground_truth.ipynb  05_create_duckdb.ipynb  06_retriev.ipynb  07_inspect_result.ipynb  08_small_fever.ipynb  09_inspect_db.ipynb  10_inspect_uncertainty.ipynb  11_unanswerable_queries.ipynb  12_results.ipynb  12_update_all_db.ipynb  13_second_db.ipynb  14_natural-questions.ipynb  15_fever_labels.ipynb
src/: api.py  create_knowledge_base.py  create_knowledge_base_large_index.py  embed.py  init.py  rag_api.py  retriev.py  test.py  test_knowledge_base.py  test_kownledge_base.py
(+52 files in other folders)
