[project]
name = "06-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "duckdb>=1.4.3",
    "einops>=0.8.1",
    "faiss-cpu",
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.1.0",
    "jax>=0.5.3",
    "numpy<2",
    "numpyro>=0.19.0",
    "omegaconf>=2.3.0",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "prettytable>=3.17.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "retriv>=0.2.3",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.5",
]
